fix nav alignment

--- a/style.scss
+++ b/style.scss
@@ -176,7 +176,7 @@ nav {
     }
 
   #nav-items {
-    justify-content: flex-start;
+    justify-content: flex-end;
   }
   .navbar-nav {
     margin-right: 5rem;
